# HiddenSteps

./: .gitignore  CHANGELOG.md  Cargo.toml  PROMPT.md  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  observation_loop.rs  recommendation_loop.rs  state.rs
apps/desktop/ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/ui/src/: App.test.tsx  App.tsx  styles.css  tauriBridge.ts
apps/desktop/ui/src/components/: DiagnosticsPage.test.tsx  DiagnosticsPage.tsx  OnboardingWizard.test.tsx  OnboardingWizard.tsx  PrivacyDashboard.test.tsx  PrivacyDashboard.tsx  RecommendationCard.test.tsx  RecommendationCard.tsx  SettingsPage.test.tsx  SettingsPage.tsx
crates/: README.md
crates/domain/: Cargo.toml
crates/domain/src/: audit.rs  captured_signal.rs  event.rs  lib.rs  llm_provider_config.rs  pattern.rs  privacy.rs  recommendation.rs
crates/enterprise-policy/: Cargo.toml
crates/enterprise-policy/src/: lib.rs
crates/event-store/: Cargo.toml
crates/event-store/src/: error.rs  lib.rs  schema.sql  store.rs  time_fmt.rs
crates/llm-provider/: Cargo.toml
crates/llm-provider/src/: anthropic.rs  detection.rs  lib.rs  ollama.rs  openai.rs  provider.rs
crates/llm-provider/tests/: ollama_live.rs
crates/observation/: Cargo.toml
crates/observation/src/: lib.rs  source.rs
crates/observation/src/linux/: active_window.rs  clipboard.rs  file_ops.rs  mod.rs  shortcuts.rs
crates/observation/src/macos/: active_window.rs  mod.rs
crates/observation/src/windows/: active_window.rs  clipboard.rs  file_ops.rs  mod.rs  shortcuts.rs
crates/patterns/: Cargo.toml
crates/patterns/src/: detector.rs  lib.rs  workflow_graph.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: classify.rs  lib.rs  pipeline.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: host.rs  lib.rs  manifest.rs
crates/plugin-host/tests/: capability_enforcement.rs
crates/privacy-engine/: Cargo.toml
crates/privacy-engine/src/: consent.rs  gate.rs  gated_provider.rs  lib.rs
crates/recommendations/: Cargo.toml
crates/recommendations/src/: lib.rs  prompt.rs  synthesizer.rs  validate.rs
crates/redaction/: Cargo.toml
crates/redaction/src/: detectors.rs  engine.rs  entropy.rs  lib.rs
crates/security/: Cargo.toml
crates/security/src/: keyring_store.rs  lib.rs  master_key.rs  memory_store.rs  passphrase.rs
docs/design/: 01-prd.md  02-system-architecture.md  03-data-flow-diagrams.md  04-trust-model.md  05-privacy-model.md  06-security-architecture.md  07-database-schema.md  08-plugin-architecture.md  09-api-specification.md  README.md
docs/design/adr/: 0001-desktop-shell-tauri.md  0002-clean-architecture-modular-core.md  0003-encrypted-sqlite-single-file-store.md  0004-llm-provider-trait-local-first.md  0005-observation-plugin-per-platform.md  0006-capture-classify-redact-summarize-pipeline.md  0007-sqlite-vec-embedding-store.md  0008-os-credential-vault-key-management.md  0009-wasm-plugin-sandbox.md  0010-hybrid-deterministic-plus-llm-recommendation-engine.md
docs/research/: 01-competitive-landscape.md  02-market-gaps-and-differentiation.md  03-risk-analysis.md  04-ethical-analysis.md  05-privacy-analysis.md  06-threat-model.md  README.md
docs/roadmap/: 01-implementation-roadmap.md  02-technology-choices.md  03-testing-strategy.md  04-security-testing.md  05-privacy-testing.md  06-performance-testing.md  README.md
docs/ux/: 01-user-journeys.md  02-onboarding-flow.md  03-privacy-dashboard.md  04-recommendations-ux.md  05-settings-and-complexity-tiers.md  06-accessibility.md  README.md
