[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/security",
    "crates/event-store",
    "crates/redaction",
    "crates/pipeline",
    "crates/observation",
    "crates/llm-provider",
    "crates/patterns",
    "crates/recommendations",
    "crates/privacy-engine",
    "crates/plugin-host",
    "crates/enterprise-policy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
