[package]
name = "hiddensteps-event-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hiddensteps-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
