[package]
name = "hiddensteps-observation"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hiddensteps-domain = { path = "../domain" }
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
notify = "6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
