[package]
name = "hiddensteps-privacy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hiddensteps-domain = { path = "../domain" }
hiddensteps-llm-provider = { path = "../llm-provider" }
thiserror.workspace = true

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
