[package]
name = "hiddensteps-recommendations"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hiddensteps-domain = { path = "../domain" }
hiddensteps-llm-provider = { path = "../llm-provider" }
hiddensteps-patterns = { path = "../patterns" }
regex = "1"
once_cell = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
